--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<script type="text/javascript" src="script.js"></script>
 </head>
 <body>
-	<div id="square"></div>
+	<div class="container">
+		<div id="gameBoard"></div>
+	</div>
 </body>
 </html>
