--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 	<div class="container">
-		<div id="gameBoard"></div>
+		<div id="game-board">
+		
+		</div>
 	</div>
 </body>
 </html>
