extended array, drew a board, working on the UI still

--- a/index.html
+++ b/index.html
@@ -10,9 +10,17 @@
 </head>
 <body>
 	<div class="container">
-		<div id="game-board">
-		
+	<h1>Blockus</h1>
+		<div id="left-side"></div>
+		<!-- invisible board seen by the computer -->
+		<div id="game-stats-container">
+			<!-- player visible board -->
+			<!-- <div id="game-board"></div>  -->
 		</div>
+		<div id="yellow-pieces"></div>
+		<div id="green-pieces"></div>
+		
 	</div>
 </body>
 </html>
+
