completed the initial state of the game (gameBoard is completed)

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<!-- invisible board seen by the computer -->
 		<div id="game-stats-container">
 			<!-- player visible board -->
-			<!-- <div id="game-board"></div>  -->
+			<div id="game-board"></div> 
 		</div>
 		<div id="yellow-pieces"></div>
 		<div id="green-pieces"></div>
