adding some notes for later

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 <body>
 	<div class="container">
 	<h1>Blockus</h1>
+		<!-- left-side will be a scrollable nav bar -->
 		<div id="left-side"></div>
 		<!-- invisible board seen by the computer -->
 		<div id="game-stats-container">
 			<!-- player visible board -->
 			<div id="game-board"></div> 
 		</div>
-		<div id="yellow-pieces"></div>
-		<div id="green-pieces"></div>
+
 		
 	</div>
 </body>
