messed up blokus-pieces, added hover event ONLY for playable board

--- a/index.html
+++ b/index.html
@@ -14,9 +14,10 @@
 		<!-- left-side will be a scrollable nav bar -->
 		<div id="left-side"></div>
 		<!-- invisible board seen by the computer -->
-		<div id="game-stats-container">
+		<div id="game-stats-container"> 
+		<!-- affeects the game... should use? event bubbling? -->
 			<!-- player visible board -->
-			<div id="game-board"></div> 
+			<!-- <div id="game-board"></div>  -->
 		</div>
 
 		
