--- a/index.html
+++ b/index.html
@@ -7,20 +7,38 @@
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
+
 </head>
 <body>
 	<div class="container">
-	<h1>Blockus</h1>
+		<h1>Blockus</h1>
 		<!-- left-side will be a scrollable nav bar -->
-		<div id="left-side"></div>
-		<!-- invisible board seen by the computer -->
-		<div id="game-stats-container"> 
-		<!-- affeects the game... should use? event bubbling? -->
-			<!-- player visible board -->
-			<!-- <div id="game-board"></div>  -->
+		<div id="left-side">
+		<!-- 	<div cass="piece-00"></div>
+			<div cass="piece-01"></div>
+			<div cass="piece-02"></div>
+			<div cass="piece-03"></div>
+			<div cass="piece-04"></div>
+			<div cass="piece-05"></div>
+			<div cass="piece-06"></div>
+			<div cass="piece-07"></div>
+			<div cass="piece-08"></div>
+			<div cass="piece-09"></div>
+			<div cass="piece-10"></div>
+			<div cass="piece-11"></div>
+			<div cass="piece-12"></div>
+			<div cass="piece-13"></div>
+			<div cass="piece-14"></div>
+			<div cass="piece-15"></div>
+			<div cass="piece-16"></div>
+			<div cass="piece-17"></div>
+			<div cass="piece-18"></div> -->
+			<div cass="piece-19"></div>
+			<div class="piece-20"></div>
 		</div>
-
 		
+		<div id="game-board"></div> 	
+	
 	</div>
 </body>
 </html>
