progress on the left side

--- a/index.html
+++ b/index.html
@@ -14,26 +14,26 @@
 		<h1>Blockus</h1>
 		<!-- left-side will be a scrollable nav bar -->
 		<div id="left-side">
-		<!-- 	<div cass="piece-00"></div>
-			<div cass="piece-01"></div>
-			<div cass="piece-02"></div>
-			<div cass="piece-03"></div>
-			<div cass="piece-04"></div>
-			<div cass="piece-05"></div>
-			<div cass="piece-06"></div>
-			<div cass="piece-07"></div>
-			<div cass="piece-08"></div>
-			<div cass="piece-09"></div>
-			<div cass="piece-10"></div>
-			<div cass="piece-11"></div>
-			<div cass="piece-12"></div>
-			<div cass="piece-13"></div>
-			<div cass="piece-14"></div>
-			<div cass="piece-15"></div>
-			<div cass="piece-16"></div>
-			<div cass="piece-17"></div>
-			<div cass="piece-18"></div> -->
-			<div cass="piece-19"></div>
+			<!-- <div cass="piece-00"></div> -->
+			<div class="piece-01"></div>
+			<!-- <div class="piece-02"></div>
+			<div class="piece-03"></div>
+			<div class="piece-04"></div>
+			<div class="piece-05"></div>
+			<div class="piece-06"></div>
+			<div class="piece-07"></div>
+			<div class="piece-08"></div>
+			<div class="piece-09"></div>
+			<div class="piece-10"></div>
+			<div class="piece-11"></div> -->
+			<div class="piece-12"></div>
+			<div class="piece-13"></div>
+			<div class="piece-14"></div>
+			<div class="piece-15"></div>
+			<div class="piece-16"></div>
+			<div class="piece-17"></div>
+			<div class="piece-18"></div>
+			<div class="piece-19"></div>
 			<div class="piece-20"></div>
 		</div>
 		
