--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
 		<h1>Blockus</h1>
 		<!-- left-side will be a scrollable nav bar -->
 		<div id="left-side">
-			<!-- <div cass="piece-00"></div> -->
-			<div class="piece-01"></div>
-			<!-- <div class="piece-02"></div>
-			<div class="piece-03"></div>
-			<div class="piece-04"></div>
-			<div class="piece-05"></div>
-			<div class="piece-06"></div>
-			<div class="piece-07"></div>
-			<div class="piece-08"></div>
-			<div class="piece-09"></div>
-			<div class="piece-10"></div>
-			<div class="piece-11"></div> -->
-			<div class="piece-12"></div>
-			<div class="piece-13"></div>
-			<div class="piece-14"></div>
-			<div class="piece-15"></div>
-			<div class="piece-16"></div>
-			<div class="piece-17"></div>
-			<div class="piece-18"></div>
-			<div class="piece-19"></div>
-			<div class="piece-20"></div>
+			<div class="game-piece piece-00"></div>
+			<div class="game-piece piece-01"></div>
+			<div class="game-piece piece-02"></div>
+			<div class="game-piece piece-03"></div>
+			<div class="game-piece piece-04"></div>
+			<div class="game-piece piece-05"></div>
+			<div class="game-piece piece-06"></div>
+			<div class="game-piece piece-07"></div>
+			<div class="game-piece piece-08"></div>
+			<div class="game-piece piece-09"></div>
+			<div class="game-piece piece-10"></div>
+			<div class="game-piece piece-11"></div>
+			<div class="game-piece piece-12"></div>
+			<div class="game-piece piece-13"></div>
+			<div class="game-piece piece-14"></div>
+			<div class="game-piece piece-15"></div>
+			<div class="game-piece piece-16"></div>
+			<div class="game-piece piece-17"></div>
+			<div class="game-piece piece-18"></div>
+			<div class="game-piece piece-19"></div>
+			<div class="game-piece piece-20"></div>
 		</div>
 		
 		<div id="game-board"></div> 	
