working on the shadow...

--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
 		<h1>Blockus</h1>
 		<!-- left-side will be a scrollable nav bar -->
 		<div id="left-side">
-			<div class="game-piece piece-00"></div>
-			<div class="game-piece piece-01"></div>
-			<div class="game-piece piece-02"></div>
-			<div class="game-piece piece-03"></div>
-			<div class="game-piece piece-04"></div>
-			<div class="game-piece piece-05"></div>
-			<div class="game-piece piece-06"></div>
-			<div class="game-piece piece-07"></div>
-			<div class="game-piece piece-08"></div>
-			<div class="game-piece piece-09"></div>
-			<div class="game-piece piece-10"></div>
-			<div class="game-piece piece-11"></div>
-			<div class="game-piece piece-12"></div>
-			<div class="game-piece piece-13"></div>
-			<div class="game-piece piece-14"></div>
-			<div class="game-piece piece-15"></div>
-			<div class="game-piece piece-16"></div>
-			<div class="game-piece piece-17"></div>
-			<div class="game-piece piece-18"></div>
-			<div class="game-piece piece-19"></div>
-			<div class="game-piece piece-20"></div>
+			<div id='piece-00' class="game-piece"></div>
+			<div id='piece-01' class="game-piece"></div>
+			<div id='piece-02' class="game-piece"></div>
+			<div id='piece-03' class="game-piece"></div>
+			<div id='piece-04' class="game-piece"></div>
+			<div id='piece-05' class="game-piece"></div>
+			<div id='piece-06' class="game-piece"></div>
+			<div id='piece-07' class="game-piece"></div>
+			<div id='piece-08' class="game-piece"></div>
+			<div id='piece-09' class="game-piece"></div>
+			<div id='piece-10' class="game-piece"></div>
+			<div id='piece-11' class="game-piece"></div>
+			<div id='piece-12' class="game-piece"></div>
+			<div id='piece-13' class="game-piece"></div>
+			<div id='piece-14' class="game-piece"></div>
+			<div id='piece-15' class="game-piece"></div>
+			<div id='piece-16' class="game-piece"></div>
+			<div id='piece-17' class="game-piece"></div>
+			<div id='piece-18' class="game-piece"></div>
+			<div id='piece-19' class="game-piece"></div>
+			<div id='piece-20' class="game-piece"></div>
 		</div>
 		
 		<div id="game-board"></div> 	
