hovers, shadows, done...

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 	<div class="container">
-		<h1>Blockus</h1>
+		<h1>Blokus</h1>
 		<!-- left-side will be a scrollable nav bar -->
 		<div id="left-side">
 			<div id='piece-0' class="game-piece"></div>
