--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <head>
 	<title>Game</title>
+
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
+
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
@@ -12,6 +14,8 @@
 <body>
 	<div class="container">
 		<h1>Blokus</h1>
+
+		<p><h3>Player: Blue</h3><button id="button">Pass & Give Up!</button></p>
 		<!-- left-side will be a scrollable nav bar -->
 		<div id="left-side">
 			<div id='piece-0' class="game-piece"></div>
