passed function works.  there's now a game over state

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
-
+<script src="dist/sweetalert.min.js"></script> <link rel="stylesheet" type="text/css" href="dist/sweetalert.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
 	<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 	<script type="text/javascript" src="script.js"></script>
@@ -15,7 +15,7 @@
 	<div class="container">
 		<h1>Blokus</h1>
 
-		<p><h3>Player: Blue</h3><button id="button">Pass & Give Up!</button></p>
+		<p><h3>Player: blue</h3><button id="button">Pass & Give Up!</button></p>
 		<!-- left-side will be a scrollable nav bar -->
 		<div id="left-side">
 			<div id='piece-0' class="game-piece"></div>
