--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 <body>
 	<div class="container">
 		<h1>Blokus</h1>
+		<p id="score">0, 0, 0, 0</p>
+		<p><h3>Player: blue</h3>
+		<button id="button">Pass & Give Up!</button></p>
 
-		<p><h3>Player: blue</h3><button id="button">Pass & Give Up!</button></p>
 		<!-- left-side will be a scrollable nav bar -->
 		<div id="left-side">
 			<div id='piece-0' class="game-piece"></div>
