cleaned code, checked code, took out console logs

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Game</title>
+	<title>Blokus!</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/main.css">
@@ -14,9 +14,8 @@
 <body>
 	<div class="container">
 		<h1>Blokus</h1>
-		<p id="score">0, 0, 0, 0</p>
 		<p><h3>Player: blue</h3>
-		<button id="button">Pass & Give Up!</button></p>
+		<button id="button">Pass THIS turn</button></p>
 
 		<!-- left-side will be a scrollable nav bar -->
 		<div id="left-side">
