cleaned up code, made some methods, added a font

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Blokus!</title>
 
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+	<link href='https://fonts.googleapis.com/css?family=News+Cycle' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" type="text/css" href="css/main.css">
 <script src="dist/sweetalert.min.js"></script> <link rel="stylesheet" type="text/css" href="dist/sweetalert.css">
 	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
