finished piece selection

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
 		<p><h3>Player: blue</h3>
 		<button id="button">Pass THIS turn</button></p>
 
-		<!-- left-side will be a scrollable nav bar -->
 		<div id="left-side">
 			<div id='piece-0' class="game-piece"></div>
 			<div id='piece-1' class="game-piece"></div>
@@ -44,6 +43,7 @@
 		</div>
 		
 		<div id="game-board"></div> 	
+		<div id="circle-yellow"></div>
 	
 	</div>
 </body>
