--- a/index.html
+++ b/index.html
@@ -2,49 +2,73 @@
 <html>
 <head>
 	<title>Blokus!</title>
-
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link href='https://fonts.googleapis.com/css?family=News+Cycle' rel='stylesheet' type='text/css'>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
-<script src="dist/sweetalert.min.js"></script> <link rel="stylesheet" type="text/css" href="dist/sweetalert.css">
-	<script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
-	<script type="text/javascript" src="script.js"></script>
-
+	<!-- Latest compiled and minified CSS & JS -->
+	<link rel="stylesheet" media="screen" href="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+	<script src="http://code.jquery.com/jquery.js"></script>
+	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+	<link rel="stylesheet" type="text/css" href="css/open.css">
 </head>
 <body>
-	<div class="container">
-		<h1>Blokus</h1>
-		<p><h3>Player: blue</h3>
-		<button id="button">Pass THIS turn</button></p>
+	<div class="contains">
+		<div id="title">
+			<h1>Blokus <small>online</small></h1>
+		</div>
+		<div class="stayLeft">
+			<button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">How to Play</button>
+			
+			<!-- Modal -->
+			<div id="myModal" class="modal fade" role="dialog">
+			  <div class="modal-dialog">
 
-		<div id="left-side">
-			<div id='piece-0' class="game-piece"></div>
-			<div id='piece-1' class="game-piece"></div>
-			<div id='piece-2' class="game-piece"></div>
-			<div id='piece-3' class="game-piece"></div>
-			<div id='piece-4' class="game-piece"></div>
-			<div id='piece-5' class="game-piece"></div>
-			<div id='piece-6' class="game-piece"></div>
-			<div id='piece-7' class="game-piece"></div>
-			<div id='piece-8' class="game-piece"></div>
-			<div id='piece-9' class="game-piece"></div>
-			<div id='piece-10' class="game-piece"></div>
-			<div id='piece-11' class="game-piece"></div>
-			<div id='piece-12' class="game-piece"></div>
-			<div id='piece-13' class="game-piece"></div>
-			<div id='piece-14' class="game-piece"></div>
-			<div id='piece-15' class="game-piece"></div>
-			<div id='piece-16' class="game-piece"></div>
-			<div id='piece-17' class="game-piece"></div>
-			<div id='piece-18' class="game-piece"></div>
-			<div id='piece-19' class="game-piece"></div>
-			<div id='piece-20' class="game-piece"></div>
+		    <!-- Modal content-->
+		    	<div class="modal-content">
+		    		<!-- Rules -->
+		      	<div class="modal-header">
+		        	<button type="button" class="close" data-dismiss="modal">&times;</button>
+		        	<h4 class="modal-title">Rules:</h4>
+		      	</div>
+		      	<div class="modal-body">
+		        	<p>
+		        		1.  Each player chooses a color and places that set of 21 pieces in front of his/her side of the board.  The order of play is as follows: blue, yellow, red, and then green.
+		        		<br/> <br/>
+								2.  The first player (blue) places any of his/her pieces in a corner square.  Play proceeds clockwise around the board (yellow, red, and green), each player putting their first piece down in one of the corner squares.
+								<br/> <br/>
+								3.  Play continues as each player lays down one piece during a turn.
+								<br/> <br/>
+								Each new piece must touch at least one other piece of the same color, but only at the corners.
+								<br/> <br/>
+								No flat edges of same color pieces can touch.
+								<br/> <br/>
+								There are no restrictions on how pieces of different colors can touch one another.
+								<br/> <br/>
+								4.  Whenever a player is unable to place one of his/her remaining pieces on the board, that player must pass his/her turn.
+		        	</p>
+		      	</div>
+		      	<!-- Controls -->
+		      	<div class="modal-header">
+		        	<h4 class="modal-title">Controls:</h4>
+		      	</div>
+		      	<div class="modal-body">
+		        	<p>
+		        		A: Click 'a' to rotate to the left.
+		        		<br/><br/>
+		        		S: Click 's' to rotate to the right.
+		        	</p>
+		      	</div>
+		      	<div class="modal-footer">
+		        	<button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+		      	</div>
+		    	</div>
+				</div>
+			</div>		
 		</div>
 		
-		<div id="game-board"></div> 	
-		<div id="circle-yellow"></div>
-	
+		<form action="game.html" role="form">
+			<div class="stayRight">
+				<button type="submit" class="btn btn-play btn-lg">Play the Game</button>
+			</div>
+		</form>
+		<!--  -->
 	</div>
 </body>
 </html>
