made changes to the appearance of the game

--- a/game.html
+++ b/game.html
@@ -14,9 +14,8 @@
 </head>
 <body>
   <div class="container">
-    <h1>Blokus</h1>
-    <p><h3>Player: blue</h3>
-    <button id="button">Pass THIS turn</button></p>
+    <p><h1>Player: blue</h1>
+    <button id="button" class="btn">Pass THIS turn</button></p>
 
     <div id="left-side">
       <div id='piece-0' class="game-piece"></div>
