--- a/game.html
+++ b/game.html
@@ -11,6 +11,10 @@
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <script type="text/javascript" src="script.js"></script>
 
+  <!-- favicon -->
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+
 </head>
 <body>
   <div class="container">
