--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 	<script src="http://code.jquery.com/jquery.js"></script>
 	<script src="http://netdna.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<link rel="stylesheet" type="text/css" href="css/open.css">
+
+	<!-- favicon -->
+	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+	<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
 	<div class="contains">
@@ -42,6 +46,10 @@
 								There are no restrictions on how pieces of different colors can touch one another.
 								<br/> <br/>
 								4.  Whenever a player is unable to place one of his/her remaining pieces on the board, that player must pass his/her turn.
+		        	</p>
+		        	<hr>
+		        	<p>
+		        		<strong>Please play ON the indicated color.</strong>
 		        	</p>
 		      	</div>
 		      	<!-- Controls -->
