ux/ui desktop v.

--- a/game.html
+++ b/game.html
@@ -17,6 +17,9 @@
 
 </head>
 <body>
+  <div class="center container">
+    <h2>This game is only available for desktop at the moment.  Please view on desktop (1050px) !</h2>
+  </div>
   <div class="container">
     <p><h1>Player: blue</h1>
     <button id="button" class="btn">Pass THIS turn</button></p>
