--- a/game.html
+++ b/game.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-  <div class="center container">
+  <div class="center">
     <h2>This game is only available for desktop at the moment.  Please view on desktop (1050px) !</h2>
   </div>
   <div class="container">
